@@ -31,6 +31,11 @@
 
       \item \code{toeplitz()} is now generalized for asymmetric cases,
       with a \code{toeplitz2()} variant.
+
+      \item \code{xy.coords()} and \code{xyz.coords()} and consequently,
+      e.g., \code{plot(x,y, log="y")} now signal a \emph{classed} warning
+      about negative values of y (where \code{log(.)} is \code{NA}).
+      Such a warning can be specifically suppressed or caught otherwise.
     }
   }
 
